--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>학교 자물쇠</h1>
+    <h1>결제_비밀번호</h1>
     <input type="text" id="answerInput" placeholder="6자리 숫자 입력(띄어쓰기 하지 마세요)">
     <button id = "nextbtn" onclick="checkAnswer()">확인</button>
     
