--- a/index.html
+++ b/index.html
@@ -6,37 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>방탈출</title>
     <link rel="stylesheet" href="style.css">
+    <script src="slay.js"></script>
 </head>
 
 <body>
-    <h1>결제_비밀번호</h1>
+
+    <h1>결제 비밀번호</h1>
     <input type="text" id="answerInput" placeholder="6자리 숫자 입력(띄어쓰기 하지 마세요)" onkeydown="handleEnter(event)">
     <button id="nextbtn" onclick="checkAnswer()">확인</button>
 
     <div id="result"></div>
-
     <script>
-        function checkAnswer() {
-            const userAnswer = document.getElementById("answerInput").value;
-            const correctAnswer = "030209"; // 여기에 올바른 답을 입력하세요
-
-            const resultDiv = document.getElementById("result");
-
-            if (userAnswer === correctAnswer) {
-                resultDiv.innerHTML = "정답입니다!";
-
-                setTimeout(function () {
-                    window.location.href = 'https://roan-helmet-ae1.notion.site/897faffc53e84e5cbbcde7f428490d81?pvs=4';
-                }, 1000);
-
-                resultDiv.style.color = "#5AB0FF";
-            } else {
-                resultDiv.innerHTML = "틀렸습니다.";
-                resultDiv.style.color = "red";
-            }
-
-            resultDiv.style.display = "block";
-        }
         function handleEnter(e) {
             if (e.keyCode === 13) { // 엔터키
                 checkAnswer();
